--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,4 @@
 
-#fondo{
-    background-color: aqua;
-}
-
 body {
     padding: 25px;
     background-color: white;
@@ -11,7 +7,7 @@ body {
   }
 
 .dark-mode {
-    background-color: darkgray;
+    background-color: black;
     color: white;
 }
 
